[gd_scene load_steps=10 format=2]

[ext_resource path="res://asteroid.gd" type="Script" id=1]
[ext_resource path="res://resources/asteroid/rock/2/asteroid_2_1.png" type="Texture" id=2]
[ext_resource path="res://Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/asteroid/rock/1/asteroid_1_1.png" type="Texture" id=4]
[ext_resource path="res://resources/asteroid/rock/1/asteroid_1_2.png" type="Texture" id=5]
[ext_resource path="res://resources/asteroid/rock/1/asteroid_1_3.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "rock",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[node name="Asteroid" type="StaticBody2D" groups=[
"others",
]]
collision_layer = 2
collision_mask = 0
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "rock"

[node name="CollisionLarge" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -15, 17, -20, 12, -20, -2, -15, -15, -4, -17, -4, -20, 3, -23, 6, -21, 7, -16, 15, -8, 17, -8, 16, -3, 21, 4, 9, 19, 9, 22, -2, 19, -12, 14 )

[node name="CollisionSmall" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 15.0
margin_top = 9.0
margin_right = 55.0
margin_bottom = 23.0
text = "12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="died" from="Health" to="." method="_on_Health_died"]
